# Tell aclocal to look in the root folder for custom M4 build macros
ACLOCAL_AMFLAGS = -I .

# Subdirectories to traverse and compile in order
SUBDIRS = \
	po \
	data \
	src \
	man

# Files to distribute in the release tarball that aren't caught by subdirectories
EXTRA_DIST = \
	AUTHORS \
	COPYING \
	README \
	$(NULL)