#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([lxde-icon-theme], [0.5.2], [http://lxde.org])
AC_CONFIG_SRCDIR([Makefile.am])

AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-xz no-dist-gzip subset])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

# Core output configuration
AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT